# shift_manager_bot

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/shift_manager_bot/: config.py  main.py
src/shift_manager_bot/api/: dependencies.py  router.py
src/shift_manager_bot/api/routes/: shifts.py  tasks.py  users.py
src/shift_manager_bot/bot/: callbacks.py  filters.py  states.py
src/shift_manager_bot/bot/handlers/: common.py  employee.py  manager.py  owner.py
src/shift_manager_bot/bot/keyboards/: employee.py  manager.py  owner.py
src/shift_manager_bot/bot/middlewares/: auth.py  db.py
src/shift_manager_bot/database/: base.py  session.py
src/shift_manager_bot/database/models/: invite_code.py  shift.py  task.py  user.py
src/shift_manager_bot/migrations/: env.py
src/shift_manager_bot/migrations/versions/: 0e7481a6698d_add_manager_id_to_users.py  207fa34f6afc_initial.py  6108da6c2f9e_refactor_shifts_add_assignments.py  690ed089c165_add_pending_role.py  c387bbc69b40_add_manager_id_to_users.py  d591f3fb690e_add_invite_codes.py
src/shift_manager_bot/scheduler/: jobs.py  setup.py
src/shift_manager_bot/services/: invite_code_service.py  shift_service.py  task_service.py  user_service.py
tests/: conftest.py
tests/test_api/: test_shifts.py  test_tasks.py  test_users.py
tests/test_bot/: test_employee_handlers.py  test_handlers.py  test_manager_handlers.py  test_middlewares.py  test_owner_handlers.py
tests/test_models/: test_invite_code.py  test_shift.py  test_task.py  test_user.py
tests/test_scheduler/: test_jobs.py
tests/test_services/: test_invite_code_service.py  test_shift_service.py  test_task_service.py  test_user_service.py
