[project]
name = "shift-manager-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Komron", email = "alexhirsch293@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "aiogram (>=3.25.0,<4.0.0)",
  "fastapi (>=0.132.0,<0.133.0)",
  "uvicorn (>=0.41.0,<0.42.0)",
  "sqlalchemy (>=2.0.46,<3.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
  "alembic (>=1.18.4,<2.0.0)",
  "redis (>=7.2.0,<8.0.0)",
  "apscheduler (>=3.11.2,<4.0.0)",
  "pydantic-settings (>=2.13.1,<3.0.0)",
  "python-dotenv (>=1.2.1,<2.0.0)",
  "greenlet (>=3.3.2,<4.0.0)",
  "telegram-init-data[fastapi] (>=1.0.2,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "shift_manager_bot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "pytest-asyncio (>=1.3.0,<2.0.0)",
  "pytest-mock (>=3.15.1,<4.0.0)",
  "factory-boy (>=3.3.3,<4.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
]
